--- a/Pandas/Pandas-Project-Exercise.ipynb
+++ b/Pandas/Pandas-Project-Exercise.ipynb
@@ -16,7 +16,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Pandas Project Exercise \n",
+    "# Pandas Project Exercise - Solutions\n",
     "\n",
     "# The Data\n",
     "\n",
@@ -55,10 +55,7 @@
    "source": [
     "# TASKS\n",
     "\n",
-    "**Complete the tasks shown in bold below. The expected output is shown in a cell below. Be careful not to run the cell above the expected output, as it will clear the expected output. Try your best to solve these in one line of pandas code (not every single question can be solved in one line, but many can be!) Refer to solutions notebook and video to view possible solutions. NOTE: Many tasks have multiple correct solution methods!**\n",
-    "\n",
-    "-----\n",
-    "### TASK: Run the following code to read in the \"hotel_booking_data.csv\" file. Feel free to explore the file a bit before continuing with the rest of the exercise."
+    "** Complete the tasks shown in bold below. The expected output is shown in a cell below. Be careful not to run the cell above the expected output, as it will clear the expected output. Try your best to solve these in one line of pandas code (not every single question can be solved in one line, but many can be!) Refer to solutions notebook and video to view possible solutions. NOTE: Many tasks have multiple correct solution methods!**"
    ]
   },
   {
@@ -314,6 +311,65 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "RangeIndex: 119390 entries, 0 to 119389\n",
+      "Data columns (total 36 columns):\n",
+      " #   Column                          Non-Null Count   Dtype  \n",
+      "---  ------                          --------------   -----  \n",
+      " 0   hotel                           119390 non-null  object \n",
+      " 1   is_canceled                     119390 non-null  int64  \n",
+      " 2   lead_time                       119390 non-null  int64  \n",
+      " 3   arrival_date_year               119390 non-null  int64  \n",
+      " 4   arrival_date_month              119390 non-null  object \n",
+      " 5   arrival_date_week_number        119390 non-null  int64  \n",
+      " 6   arrival_date_day_of_month       119390 non-null  int64  \n",
+      " 7   stays_in_weekend_nights         119390 non-null  int64  \n",
+      " 8   stays_in_week_nights            119390 non-null  int64  \n",
+      " 9   adults                          119390 non-null  int64  \n",
+      " 10  children                        119386 non-null  float64\n",
+      " 11  babies                          119390 non-null  int64  \n",
+      " 12  meal                            119390 non-null  object \n",
+      " 13  country                         118902 non-null  object \n",
+      " 14  market_segment                  119390 non-null  object \n",
+      " 15  distribution_channel            119390 non-null  object \n",
+      " 16  is_repeated_guest               119390 non-null  int64  \n",
+      " 17  previous_cancellations          119390 non-null  int64  \n",
+      " 18  previous_bookings_not_canceled  119390 non-null  int64  \n",
+      " 19  reserved_room_type              119390 non-null  object \n",
+      " 20  assigned_room_type              119390 non-null  object \n",
+      " 21  booking_changes                 119390 non-null  int64  \n",
+      " 22  deposit_type                    119390 non-null  object \n",
+      " 23  agent                           103050 non-null  float64\n",
+      " 24  company                         6797 non-null    float64\n",
+      " 25  days_in_waiting_list            119390 non-null  int64  \n",
+      " 26  customer_type                   119390 non-null  object \n",
+      " 27  adr                             119390 non-null  float64\n",
+      " 28  required_car_parking_spaces     119390 non-null  int64  \n",
+      " 29  total_of_special_requests       119390 non-null  int64  \n",
+      " 30  reservation_status              119390 non-null  object \n",
+      " 31  reservation_status_date         119390 non-null  object \n",
+      " 32  name                            119390 non-null  object \n",
+      " 33  email                           119390 non-null  object \n",
+      " 34  phone-number                    119390 non-null  object \n",
+      " 35  credit_card                     119390 non-null  object \n",
+      "dtypes: float64(4), int64(16), object(16)\n",
+      "memory usage: 32.8+ MB\n"
+     ]
+    }
+   ],
+   "source": [
+    "hotels.info()"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -348,7 +404,9 @@
      "output_type": "execute_result"
     }
    ],
-   "source": []
+   "source": [
+    "len(hotels) #hotels.info()"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -420,7 +478,10 @@
      "output_type": "execute_result"
     }
    ],
-   "source": []
+   "source": [
+    "# hotels.isna().sum() #works as well\n",
+    "hotels.isnull().sum()"
+   ]
   },
   {
    "cell_type": "code",
@@ -435,7 +496,9 @@
      ]
     }
    ],
-   "source": []
+   "source": [
+    "print(f\"Yes, missing data, company column missing: {hotels['company'].isna().sum()} rows.\")"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -462,7 +525,9 @@
     "collapsed": true
    },
    "outputs": [],
-   "source": []
+   "source": [
+    "hotels = hotels.drop('company',axis=1)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -505,7 +570,9 @@
      "output_type": "execute_result"
     }
    ],
-   "source": []
+   "source": [
+    "hotels['country'].value_counts()[:5]"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -543,7 +610,9 @@
      "output_type": "execute_result"
     }
    ],
-   "source": []
+   "source": [
+    "hotels.sort_values('adr',ascending=False)[['adr','name']].iloc[0]"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -579,7 +648,9 @@
      "output_type": "execute_result"
     }
    ],
-   "source": []
+   "source": [
+    "round(hotels['adr'].mean(),2)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -615,13 +686,17 @@
      "output_type": "execute_result"
     }
    ],
-   "source": []
+   "source": [
+    "hotels['total_stay_days'] = hotels['stays_in_week_nights'] + hotels['stays_in_weekend_nights']\n",
+    "\n",
+    "round(hotels['total_stay_days'].mean(),2)"
+   ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**TASK: What is the average total cost for a stay in the dataset? Not *average daily cost*, but *total* stay cost. (You will need to calculate total cost your self by using ADR and week day and weeknight stays). Feel free to round this to 2 decimal points.**"
+    "**TASK: What is the average total cost for a stay in the dataset? Not *average daily cost*, but *total* stay cost.  Feel free to round this to 2 decimal points.**"
    ]
   },
   {
@@ -651,13 +726,16 @@
      "output_type": "execute_result"
     }
    ],
-   "source": []
+   "source": [
+    "hotels['total_paid'] = hotels['adr'] * hotels['total_stay_days']\n",
+    "round(hotels['total_paid'].mean(),2)"
+   ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**TASK: What are the names and emails of people who made exactly 5 \"Special Requests\"?**"
+    "**TASK: What are the names and emails of people who made 5 \"Special Requests\"?**"
    ]
   },
   {
@@ -955,7 +1033,9 @@
      "output_type": "execute_result"
     }
    ],
-   "source": []
+   "source": [
+    "hotels[hotels['total_of_special_requests'] == 5][['name','email']]"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -991,7 +1071,10 @@
      "output_type": "execute_result"
     }
    ],
-   "source": []
+   "source": [
+    "# You can sum booleans, False gets treated as zero, True as one\n",
+    "round(100 * sum(hotels['is_repeated_guest'] == 1) / len(hotels),2)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -1032,7 +1115,9 @@
      "output_type": "execute_result"
     }
    ],
-   "source": []
+   "source": [
+    "hotels['name'].apply(lambda name: name.split()[1]).value_counts()[:5]"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -1126,7 +1211,11 @@
      "output_type": "execute_result"
     }
    ],
-   "source": []
+   "source": [
+    "hotels['total_kids'] = hotels['babies'] + hotels['children']\n",
+    "\n",
+    "hotels.sort_values('total_kids',ascending=False)[['name','adults','total_kids','babies','children']][:3]"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -1172,7 +1261,10 @@
      "output_type": "execute_result"
     }
    ],
-   "source": []
+   "source": [
+    "print('Code - Total Count')\n",
+    "hotels['phone-number'].apply(lambda num:num[:3]).value_counts()[:3]"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -1208,7 +1300,9 @@
      "output_type": "execute_result"
     }
    ],
-   "source": []
+   "source": [
+    "hotels['arrival_date_day_of_month'].apply(lambda day: day in range(1,16)).sum()"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -1221,12 +1315,53 @@
   {
    "cell_type": "code",
    "execution_count": 105,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# CODE HERE"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 106,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
    "source": [
-    "# CODE HERE"
+    "import numpy as np"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 107,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "def convert(day,month,year):\n",
+    "    return f'{day}-{month}-{year}'"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 109,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "hotels['date']  = np.vectorize(convert)(hotels['arrival_date_day_of_month'],\n",
+    "                                        hotels['arrival_date_month'],\n",
+    "                                        hotels['arrival_date_year'])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 112,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "hotels['date'] = pd.to_datetime(hotels['date'])"
    ]
   },
   {
@@ -1252,18 +1387,19 @@
      "output_type": "execute_result"
     }
    ],
-   "source": []
+   "source": [
+    "# https://pandas.pydata.org/pandas-docs/stable/reference/api/pandas.Series.dt.day_name.html#pandas.Series.dt.day_name\n",
+    "hotels['date'].dt.day_name().value_counts()"
+   ]
   },
   {
-   "cell_type": "markdown",
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {
     "collapsed": true
    },
-   "source": [
-    "---\n",
-    "\n",
-    "---"
-   ]
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
