--- a/Pandas/Pandas-Project-Exercise.ipynb
+++ b/Pandas/Pandas-Project-Exercise.ipynb
@@ -16,7 +16,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Pandas Project Exercise - Solutions\n",
+    "# Pandas Project Exercise\n",
     "\n",
     "# The Data\n",
     "\n",
