--- a/Linear Regression/Logistic-Regression-Project-Exercise.ipynb
+++ b/Linear Regression/Logistic-Regression-Project-Exercise.ipynb
@@ -4,32 +4,15 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "___\n",
-    "\n",
-    "<a href='http://www.pieriandata.com'><img src='../Pierian_Data_Logo.png'/></a>\n",
-    "___\n",
-    "<center><em>Copyright by Pierian Data Inc.</em></center>\n",
-    "<center><em>For more information, visit us at <a href='http://www.pieriandata.com'>www.pieriandata.com</a></em></center>"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
     "# Logistic Regression Project Exercise\n",
-    "\n",
-    "**GOAL: Create a Classification Model that can predict whether or not a person has presence of heart disease based on physical features of that person (age,sex, cholesterol, etc...)**\n",
-    "\n",
-    "**Complete the TASKs written in bold below.**"
+    "\n"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Imports\n",
-    "\n",
-    "**TASK: Run the cell below to import the necessary libraries.**"
+    "## Imports\n"
    ]
   },
   {
@@ -69,25 +52,7 @@
     "* the slope of the peak exercise ST segment\n",
     "* number of major vessels (0-3) colored by flourosopy\n",
     "* thal: 3 = normal; 6 = fixed defect; 7 = reversable defect\n",
-    "* target:0 for no presence of heart disease, 1 for presence of heart disease\n",
-    "\n",
-    "Original Source: https://archive.ics.uci.edu/ml/datasets/Heart+Disease\n",
-    "\n",
-    "Creators:\n",
-    "\n",
-    "Hungarian Institute of Cardiology. Budapest: Andras Janosi, M.D.\n",
-    "University Hospital, Zurich, Switzerland: William Steinbrunn, M.D.\n",
-    "University Hospital, Basel, Switzerland: Matthias Pfisterer, M.D.\n",
-    "V.A. Medical Center, Long Beach and Cleveland Clinic Foundation: Robert Detrano, M.D., Ph.D."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "----\n",
-    "\n",
-    "**TASK: Run the cell below to read in the data.**"
+    "* target:0 for no presence of heart disease, 1 for presence of heart disease\n"
    ]
   },
   {
@@ -280,11 +245,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Exploratory Data Analysis and Visualization\n",
-    "\n",
-    "Feel free to explore the data further on your own.\n",
-    "\n",
-    "**TASK: Explore if the dataset has any missing data points and create a statistical summary of the numerical features as shown below.**"
+    "### Exploratory Data Analysis and Visualization\n"
    ]
   },
   {
@@ -550,9 +511,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Visualization Tasks\n",
-    "\n",
-    "**TASK: Create a bar plot that shows the total counts per target value.**"
+    "### Visualization Tasks\n"
    ]
   },
   {
@@ -583,17 +542,6 @@
    ],
    "source": [
     "sns.countplot(x='target',data=df)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "**TASK: Create a pairplot that displays the relationships between the following columns:**\n",
-    "\n",
-    "    ['age','trestbps', 'chol','thalach','target']\n",
-    "   \n",
-    "*Note: Running a pairplot on everything can take a very long time due to the number of features*"
    ]
   },
   {
@@ -650,13 +598,6 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "**TASK: Create a heatmap that displays the correlation between all the columns.**"
-   ]
-  },
-  {
    "cell_type": "code",
    "execution_count": 15,
    "metadata": {},
@@ -697,8 +638,7 @@
     "# Machine Learning\n",
     "\n",
     "## Train | Test Split and Scaling\n",
-    "\n",
-    "**TASK: Separate the features from the labels into 2 objects, X and y.**"
+    "\n"
    ]
   },
   {
@@ -709,22 +649,6 @@
    "source": [
     "X = df.drop('target',axis=1)\n",
     "y = df['target']"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "**TASK: Perform a train test split on the data, with the test size of 10% and a random_state of 101.**"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 18,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# CODE HERE"
    ]
   },
   {
@@ -744,13 +668,6 @@
    "outputs": [],
    "source": [
     "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.1, random_state=101)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "**TASK: Create a StandardScaler object and normalize the X train and test set feature data. Make sure you only fit to the training data to avoid data leakage (data knowledge leaking from the test set).**"
    ]
   },
   {
@@ -777,8 +694,7 @@
    "metadata": {},
    "source": [
     "## Logistic Regression Model\n",
-    "\n",
-    "**TASK: Create a Logistic Regression model and use Cross-Validation to find a well-performing C value for the hyper-parameter search. You have two options here, use *LogisticRegressionCV* OR use a combination of *LogisticRegression* and *GridSearchCV*. The choice is up to you, the solutions use the simpler *LogisticRegressionCV* approach.**"
+    "\n"
    ]
   },
   {
@@ -1227,15 +1143,6 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "**TASK: Report back your search's optimal parameters, specifically the C value.** \n",
-    "\n",
-    "*Note: You may get a different value than what is shown here depending on how you conducted your search.*"
-   ]
-  },
-  {
    "cell_type": "code",
    "execution_count": 30,
    "metadata": {},
@@ -1292,15 +1199,6 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### Coeffecients\n",
-    "\n",
-    "**TASK: Report back the model's coefficients.**"
-   ]
-  },
-  {
    "cell_type": "code",
    "execution_count": 32,
    "metadata": {},
@@ -1320,13 +1218,6 @@
    ],
    "source": [
     "log_model.coef_"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "**BONUS TASK: We didn't show this in the lecture notebooks, but you have the skills to do this! Create a visualization of the coefficients by using a barplot of their values. Even more bonus points if you can figure out how to sort the plot! If you get stuck on this, feel free to quickly view the solutions notebook for hints, there are many ways to do this, the solutions use a combination of pandas and seaborn.**"
    ]
   },
   {
@@ -1377,18 +1268,6 @@
     "---------\n",
     "\n",
     "## Model Performance Evaluation"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "**TASK: Let's now evaluate your model on the remaining 10% of the data, the test set.**\n",
-    "\n",
-    "**TASK: Create the following evaluations:**\n",
-    "* Confusion Matrix Array\n",
-    "* Confusion Matrix Plot\n",
-    "* Classification Report"
    ]
   },
   {
@@ -1462,36 +1341,6 @@
    "metadata": {},
    "source": [
     "### Performance Curves\n"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "**Final Task: A patient with the following features has come into the medical office:**\n",
-    "\n",
-    "    age          48.0\n",
-    "    sex           0.0\n",
-    "    cp            2.0\n",
-    "    trestbps    130.0\n",
-    "    chol        275.0\n",
-    "    fbs           0.0\n",
-    "    restecg       1.0\n",
-    "    thalach     139.0\n",
-    "    exang         0.0\n",
-    "    oldpeak       0.2\n",
-    "    slope         2.0\n",
-    "    ca            0.0\n",
-    "    thal          2.0"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "**TASK: What does your model predict for this patient? Do they have heart disease? How \"sure\" is your model of this prediction?**\n",
-    "\n",
-    "*For convience, we created an array of the features for the patient above*"
    ]
   },
   {
@@ -1595,15 +1444,6 @@
    ],
    "source": [
     "log_model.predict_proba(patient)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "----\n",
-    "\n",
-    "## Great Job!"
    ]
   }
  ],
