--- a/Logistic Regression/iris.ipynb
+++ b/Logistic Regression/iris.ipynb
@@ -4,21 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "___\n",
-    "\n",
-    "<a href='http://www.pieriandata.com'><img src='../Pierian_Data_Logo.png'/></a>\n",
-    "___\n",
-    "<center><em>Copyright by Pierian Data Inc.</em></center>\n",
-    "<center><em>For more information, visit us at <a href='http://www.pieriandata.com'>www.pieriandata.com</a></em></center>"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "# Multi-Class Logistic Regression\n",
-    "\n",
-    "Students often ask how to perform non binary classification with Logistic Regression. Fortunately, the process with scikit-learn is pretty much the same as with binary classification. To expand our understanding, we'll go through a simple data set, as well as seeing how to use LogisiticRegression with a manual GridSearchCV (instead of LogisticRegressionCV). "
+    "# Multi-Class Logistic Regression\n"
    ]
   },
   {
@@ -44,11 +30,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Data\n",
-    "\n",
-    "We will work with the classic Iris Data Set. The Iris flower data set or Fisher's Iris data set is a multivariate data set introduced by the British statistician, eugenicist, and biologist Ronald Fisher in his 1936 paper The use of multiple measurements in taxonomic problems as an example of linear discriminant analysis.\n",
-    "\n",
-    "Full Details: https://en.wikipedia.org/wiki/Iris_flower_data_set"
+    "## Data\n"
    ]
   },
   {
@@ -154,15 +136,6 @@
    ],
    "source": [
     "df.head()"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### Exploratory Data Analysis and Visualization\n",
-    "\n",
-    "Feel free to explore the data further on your own."
    ]
   },
   {
@@ -472,13 +445,6 @@
     "corr_matrix = numeric_df.corr()\n",
     "sns.heatmap(corr_matrix, annot=True)\n",
     "plt.show()"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Easily discover new plot types with a google search! Searching for \"3d matplotlib scatter plot\" quickly takes you to: https://matplotlib.org/3.1.1/gallery/mplot3d/scatter3d.html"
    ]
   },
   {
@@ -1110,13 +1076,6 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### Model Performance on Classification Tasks"
-   ]
-  },
-  {
    "cell_type": "code",
    "execution_count": 29,
    "metadata": {},
@@ -1200,19 +1159,6 @@
    ],
    "source": [
     "print(classification_report(y_test,y_pred))"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## Evaluating Curves and AUC\n",
-    "\n",
-    "**Make sure to watch the video on this! We need to manually create the plots for a Multi-Class situation. Fortunately, Scikit-learn's documentation already has plenty of examples on this.**\n",
-    "\n",
-    "Source: https://scikit-learn.org/stable/auto_examples/model_selection/plot_roc.html\n",
-    "\n",
-    "We have created a function for you that does this automatically, essentially creating and plotting an ROC per class."
    ]
   },
   {
