--- a/KNN/KNN-Exercise.ipynb
+++ b/KNN/KNN-Exercise.ipynb
@@ -4,48 +4,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "___\n",
-    "\n",
-    "<a href='https://www.udemy.com/user/joseportilla/'><img src='../Pierian_Data_Logo.png'/></a>\n",
-    "___\n",
-    "<center><em>Copyright by Pierian Data Inc.</em></center>\n",
-    "<center><em>For more information, visit us at <a href='http://www.pieriandata.com'>www.pieriandata.com</a></em></center>"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
     "# KNN Project Exercise\n",
     "\n",
     "Due to the simplicity of KNN for Classification, let's focus on using a PipeLine and a GridSearchCV tool, since these skills can be generalized for any model."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "\n",
-    "## The Sonar Data \n",
-    "\n",
-    "### Detecting a Rock or a Mine\n",
-    "\n",
-    "Sonar (sound navigation ranging) is a technique that uses sound propagation (usually underwater, as in submarine navigation) to navigate, communicate with or detect objects on or under the surface of the water, such as other vessels.\n",
-    "\n",
-    "<img src=\"sonar.jpg\"  style=\"max-height: 500px; max-width: 500px;\">\n",
-    "\n",
-    "The data set contains the response metrics for 60 separate sonar frequencies sent out against a known mine field (and known rocks). These frequencies are then labeled with the known object they were beaming the sound at (either a rock or a mine). \n",
-    "\n",
-    "<img src=\"mine.jpg\"  style=\"max-height: 500px; max-width: 500px;\">\n",
-    "\n",
-    "Our main goal is to create a machine learning model capable of detecting the difference between a rock or a mine based on the response of the 60 separate sonar frequencies.\n",
-    "\n",
-    "\n",
-    "Data Source: https://archive.ics.uci.edu/ml/datasets/Connectionist+Bench+(Sonar,+Mines+vs.+Rocks)\n",
-    "\n",
-    "### Complete the Tasks in bold\n",
-    "\n",
-    "**TASK: Run the cells below to load the data.**"
    ]
   },
   {
@@ -283,8 +244,7 @@
    "metadata": {},
    "source": [
     "## Data Exploration\n",
-    "\n",
-    "**TASK: Create a heatmap of the correlation between the difference frequency responses.**"
+    "\n"
    ]
   },
   {
@@ -317,11 +277,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Train | Test Split\n",
-    "\n",
-    "Our approach here will be one of using Cross Validation on 90% of the dataset, and then judging our results on a final test set of 10% to evaluate our model.\n",
-    "\n",
-    "**TASK: Split the data into features and labels, and then split into a training set and test set, with 90% for Cross-Validation training, and 10% for a final test set.**"
+    "## Train | Test Split\n"
    ]
   },
   {
@@ -359,13 +315,6 @@
    "outputs": [],
    "source": [
     "X_cv, X_test, y_cv, y_test = train_test_split(X, y, test_size=0.1, random_state=42)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "**TASK: Create a PipeLine that contains both a StandardScaler and a KNN model**"
    ]
   },
   {
@@ -421,13 +370,6 @@
    "outputs": [],
    "source": [
     "pipe = Pipeline(operations)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "**TASK: Perform a grid-search with the pipeline to test various values of k and report back the best performing parameters.**"
    ]
   },
   {
@@ -951,13 +893,6 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "**(HARD) TASK: Using the .cv_results_ dictionary, see if you can create a plot of the mean test scores per K value.**"
-   ]
-  },
-  {
    "cell_type": "code",
    "execution_count": 28,
    "metadata": {},
@@ -1020,8 +955,7 @@
    "metadata": {},
    "source": [
     "### Final Model Evaluation\n",
-    "\n",
-    "**TASK: Using the grid classifier object from the previous step, get a final performance classification report and confusion matrix.**"
+    "\n"
    ]
   },
   {
@@ -1086,13 +1020,6 @@
    ],
    "source": [
     "print(classification_report(y_test,pred))"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### Great Job!"
    ]
   }
  ],
