--- a/SVM/SVM-Project-Exercise.ipynb
+++ b/SVM/SVM-Project-Exercise.ipynb
@@ -4,53 +4,16 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "___\n",
-    "\n",
-    "<a href='https://www.udemy.com/user/joseportilla/'><img src='../Pierian_Data_Logo.png'/></a>\n",
-    "___\n",
-    "<center><em>Copyright by Pierian Data Inc.</em></center>\n",
-    "<center><em>For more information, visit us at <a href='http://www.pieriandata.com'>www.pieriandata.com</a></em></center>"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
     "# Support Vector Machines \n",
     "## Exercise\n",
-    "\n",
-    "## Fraud in Wine\n",
-    "\n",
-    "Wine fraud relates to the commercial aspects of wine. The most prevalent type of fraud is one where wines are adulterated, usually with the addition of cheaper products (e.g. juices) and sometimes with harmful chemicals and sweeteners (compensating for color or flavor).\n",
-    "\n",
-    "Counterfeiting and the relabelling of inferior and cheaper wines to more expensive brands is another common type of wine fraud.\n",
-    "\n",
-    "<img src=\"wine.jpg\">\n",
-    "\n",
-    "## Project Goals\n",
-    "\n",
-    "A distribution company that was recently a victim of fraud has completed an audit of various samples of wine through the use of chemical analysis on samples. The distribution company specializes in exporting extremely high quality, expensive wines, but was defrauded by a supplier who was attempting to pass off cheap, low quality wine as higher grade wine. The distribution company has hired you to attempt to create a machine learning model that can help detect low quality (a.k.a \"fraud\") wine samples. They want to know if it is even possible to detect such a difference.\n",
-    "\n",
-    "\n",
-    "Data Source: *P. Cortez, A. Cerdeira, F. Almeida, T. Matos and J. Reis. Modeling wine preferences by data mining from physicochemical properties.\n",
-    "In Decision Support Systems, Elsevier, 47(4):547-553, 2009.*\n",
-    "\n",
-    "---\n",
-    "---\n",
-    "\n",
-    "**TASK: Your overall goal is to use the wine dataset shown below to develop a machine learning model that attempts to predict if a wine is \"Legit\" or \"Fraud\" based on various chemical features. Complete the tasks below to follow along with the project.**\n",
-    "\n",
-    "---\n",
-    "---"
+    "\n"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Complete the Tasks in bold\n",
-    "\n",
-    "**TASK: Run the cells below to import the libraries and load the dataset.**"
+    "## Complete the Tasks in bold\n"
    ]
   },
   {
@@ -233,13 +196,6 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "**TASK: What are the unique variables in the target column we are trying to predict (quality)?**"
-   ]
-  },
-  {
    "cell_type": "code",
    "execution_count": 4,
    "metadata": {},
@@ -257,13 +213,6 @@
    ],
    "source": [
     "df['quality'].unique()"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "**TASK: Create a countplot that displays the count per category of Legit vs Fraud. Is the label/target balanced or unbalanced?**"
    ]
   },
   {
@@ -297,13 +246,6 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "**TASK: Let's find out if there is a difference between red and white wine when it comes to fraud. Create a countplot that has the wine *type* on the x axis with the hue separating columns by Fraud vs Legit.**"
-   ]
-  },
-  {
    "cell_type": "code",
    "execution_count": 6,
    "metadata": {},
@@ -331,13 +273,6 @@
    ],
    "source": [
     "sns.countplot(x='type',hue='quality',data=df)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "**TASK: What percentage of red wines are Fraud? What percentage of white wines are fraud?**"
    ]
   },
   {
@@ -397,13 +332,6 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "**TASK: Calculate the correlation between the various features and the \"quality\" column. To do this you may need to map the column to 0 and 1 instead of a string.**"
-   ]
-  },
-  {
    "cell_type": "code",
    "execution_count": 11,
    "metadata": {},
@@ -460,13 +388,6 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "**TASK: Create a bar plot of the correlation values to Fraudlent wine.**"
-   ]
-  },
-  {
    "cell_type": "code",
    "execution_count": 15,
    "metadata": {},
@@ -494,13 +415,6 @@
    ],
    "source": [
     "numeric_df.corr()['Fraud'][:-1].sort_values().plot(kind='bar')"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "**TASK: Create a clustermap with seaborn to explore the relationships between variables.**"
    ]
   },
   {
@@ -534,16 +448,6 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "----\n",
-    "## Machine Learning Model\n",
-    "\n",
-    "**TASK: Convert the categorical column \"type\" from a string or \"red\" or \"white\" to dummy variables:**"
-   ]
-  },
-  {
    "cell_type": "code",
    "execution_count": 18,
    "metadata": {},
@@ -562,13 +466,6 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "**TASK: Separate out the data into X features and y target label (\"quality\" column)**"
-   ]
-  },
-  {
    "cell_type": "code",
    "execution_count": 20,
    "metadata": {},
@@ -576,13 +473,6 @@
    "source": [
     "X = df.drop('quality',axis=1)\n",
     "y = df['quality']"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "**TASK: Perform a Train|Test split on the data, with a 10% test size. Note: The solution uses a random state of 101**"
    ]
   },
   {
@@ -601,13 +491,6 @@
    "outputs": [],
    "source": [
     "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.1, random_state=101)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "**TASK: Scale the X train and X test data.**"
    ]
   },
   {
@@ -639,13 +522,6 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "**TASK: Create an instance of a Support Vector Machine classifier. Previously we have left this model \"blank\", (e.g. with no parameters). However, we already know that the classes are unbalanced, in an attempt to help alleviate this issue, we can automatically adjust weights inversely proportional to class frequencies in the input data with a argument call in the SVC() call. Check out the [documentation for SVC] online and look up what the argument\\parameter is.**"
-   ]
-  },
-  {
    "cell_type": "code",
    "execution_count": 27,
    "metadata": {},
@@ -661,13 +537,6 @@
    "outputs": [],
    "source": [
     "svc = SVC(class_weight='balanced')"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "**TASK: Use a GridSearchCV to run a grid search for the best C and gamma parameters.**"
    ]
   },
   {
@@ -1140,13 +1009,6 @@
    ],
    "source": [
     "grid.best_params_"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "**TASK: Display the confusion matrix and classification report for your model.**"
    ]
   },
   {
